--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,3 +19,14 @@ stages:
     - script: |
         echo "Running unit tests..."
       displayName: 'Run unit tests'
+- stage: Test
+  displayName: 'Test Stage'
+  dependsOn: Build
+  isSkippable: false
+  jobs:
+  - job: TestJob
+    displayName: 'Test Job'
+    steps:
+    - script: |
+        echo "Running unit tests..."
+      displayName: 'Run unit tests'
